[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/boid.png" type="Texture" id=1]
[ext_resource path="res://scenes/Boid.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 30.3204

[sub_resource type="CircleShape2D" id=2]
radius = 82.7877

[node name="Boid" type="KinematicBody2D"]
scale = Vector2( 0.25, 0.25 )
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="RepulsionArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="RepulsionArea"]
shape = SubResource( 2 )
[connection signal="body_entered" from="RepulsionArea" to="." method="_on_RepulsionArea_body_entered"]
[connection signal="body_exited" from="RepulsionArea" to="." method="_on_RepulsionArea_body_exited"]
